--- a/warehouse/agent/curlang.toml
+++ b/warehouse/agent/curlang.toml
@@ -29,7 +29,7 @@ wget = "*"
 
 [packages.python]
 kokoro-onnx = "0.4.2"
-llama-cpp-python = "0.3.7 --extra-index-url https://abetlen.github.io/llama-cpp-python/whl/cpu"
+llama-cpp-python = "0.3.7"
 soundfile = "0.13.1"
 tiktoken = "0.9.0"
 
