--- a/warehouse/dataset/curlang.toml
+++ b/warehouse/dataset/curlang.toml
@@ -28,7 +28,7 @@ sox = "*"
 wget = "*"
 
 [packages.python]
-llama-cpp-python = "0.3.7 --extra-index-url https://abetlen.github.io/llama-cpp-python/whl/cpu"
+llama-cpp-python = "0.3.7"
 tiktoken = "0.9.0"
 
 # [[git]]
