--- a/warehouse/robot/curlang.toml
+++ b/warehouse/robot/curlang.toml
@@ -28,6 +28,7 @@ wget = "*"
 [packages.python]
 fastapi = "0.115.9"
 llama-cpp-python = "0.3.7"
+moondream = "0.0.6"
 pexpect = "4.9.0"
 tiktoken = "0.9.0"
 uvicorn = "0.34.0"
