--- a/warehouse/robot/curlang.toml
+++ b/warehouse/robot/curlang.toml
@@ -30,6 +30,7 @@ fastapi = "0.115.9"
 llama-cpp-python = "0.3.7"
 moondream = "0.0.6"
 pexpect = "4.9.0"
+pillow = "11.1.0"
 python-multipart = "0.0.20"
 tiktoken = "0.9.0"
 uvicorn = "0.34.0"
